--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -67,5 +67,12 @@
             android:layout_height="wrap_content"
             android:text="包裹Fragment"
             android:textAllCaps="false" />
+
+        <Button
+            android:id="@+id/btn_three_stage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Three-Step Header"
+            android:textAllCaps="false" />
     </LinearLayout>
 </ScrollView>
